crates/nirvash-macros/tests/fixtures/runtime_contract_duplicate_action.stderr
error: duplicate contract_case action
   --> tests/fixtures/runtime_contract_duplicate_action.rs:107:5
    |
107 |     #[nirvash_macros::contract_case(action = Action::Start, update(state = State::Idle))]
    |     ^
